repairs inline-image alignement on mobile

--- a/app/assets/stylesheets/_events.css.scss
+++ b/app/assets/stylesheets/_events.css.scss
@@ -89,7 +89,6 @@ h1{
 .show-desc{
 	@media #{$tablet}{
 		.left{
-			width: inherit;
 			img{
 				float: right;
 			}
